Bug 838080 - Cannot receive all events after a series of actions, r=echou